# prodapi

./: .gitignore  README.md  agents-exe.cfg.json  agq.json  cabal.project
agents/: agent.json  documenter.json  oneshot.json
backend-tools/: spago.dhall
backend-tools/extension/: background.js  manifest.json  popup.html  popup.js
backend-tools/src/: History.purs  HistoryPacked.purs  Main.js  Main.purs  Monitor.purs
backend-tools/src/Charting/: Charts.purs  SparkLine.purs  TimeSeries.purs
backend-tools/src/Parsing/: Prometheus.purs
docs/: AI-CONTEXT.md  README.md  architecture.md  component-guide.md  module-index.md  quickstart.md
example/: Main.hs  example.cabal  run-db.sh  run-pings.sh  run-userreg.sh
example/src/: BackgroundNetwork.hs  Hello.hs  Monitors.hs
example/src/Monitors/: Api.hs  Base.hs  Counters.hs  Handlers.hs
prodapi/: prodapi.cabal
prodapi-core/: prodapi-core.cabal
prodapi-core/src/Prod/: Background.hs  Stepper.hs  Tracer.hs
prodapi-gen/: CHANGELOG.md  LICENSE  Main.hs  prodapi-gen.cabal
prodapi-pg/: CHANGELOG.md  prodapi-pg.cabal
prodapi-pg/migrations/owner/: 01-add-tasks-tables.sql  tip.sql
prodapi-pg/src/Prod/Pg/: DatabaseUtils.hs  TaskQueue.hs
prodapi-proxy/: prodapi-proxy.cabal
prodapi-proxy/src/Prod/: Proxy.hs
prodapi-proxy/src/Prod/Proxy/: Base.hs  Compat.hs  Lookups.hs  MultiApp.hs  R.hs
prodapi-userauth/: CHANGELOG.md  prodapi-userauth.cabal
prodapi-userauth/src/Prod/: UserAuth.hs
prodapi-userauth/src/Prod/UserAuth/: Api.hs  Backend.hs  Base.hs  Counters.hs  HandlerCombinators.hs  JWT.hs  OAuth2.hs  Runtime.hs  Trace.hs
prodapi-web/: CHANGELOG.md  prodapi-web.cabal
prodapi-web/src/Prod/: App.hs  Discovery.hs  Echo.hs  Health.hs  Healthcheck.hs  MimeTypes.hs  Prometheus.hs  Reports.hs  Status.hs  Watchdog.hs
prodapi/scripts/: 0001-add-crypto.sql  0002-add-uuid.sql  0003-add-userauth.sql
prodapi/src/Prod/: App.hs  Background.hs  Discovery.hs  Echo.hs  Health.hs  Healthcheck.hs  MimeTypes.hs  Prometheus.hs  Reports.hs  Status.hs  Stepper.hs  Tracer.hs  UserAuth.hs  Watchdog.hs
prodapi/src/Prod/UserAuth/: Api.hs  Backend.hs  Base.hs  HandlerCombinators.hs  JWT.hs  Runtime.hs  Trace.hs
scripts/: gen-all.sh
tasks/: agq.db
tools/askuser/: ask-user.bash  display-large-text.bash
tools/dev/read/: check-code.sh  grep-files.sh  list-files.sh  read-file.sh
tools/dev/write/: write-file.sh
tools/git/read/: get-history-commit.sh  git-log.sh
tools/github/write/: create-issue.sh
tools/web/read/: curl-page.sh
www/: index.html  metrics.js  status.css
