cabal-version:       >=1.10
name:                prodapi-core
version:             0.1.0.0
synopsis:            Core utilities for building Haskell services (tracers, background tasks, steppers).
description:         Core infrastructure components for building production Haskell services.
                     Includes contravariant tracers, background task management, and state-machine steppers.
                     These components have minimal dependencies (no Servant, no Prometheus).
license:             BSD3
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
      Prod.Tracer
      Prod.Background
      Prod.Stepper
      Paths_prodapi_core
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings DataKinds TypeApplications TypeOperators
  build-depends:
    base >= 4.7 && <5,
    aeson >= 2.2.1 && < 2.3,
    bytestring >= 0.12.1 && < 0.13,
    text >= 2.1.1 && < 2.2,
    contravariant >= 1.5.5 && < 1.6,
    time >= 1.12.2 && < 1.13,
    async >= 2.2.5 && < 2.3,
    unix-time >= 0.4.16 && < 0.5,
    unbounded-delays >= 0.1.1.1 && < 0.2
  default-language:    Haskell2010

