cabal-version:       2.0
name:                prodapi-web
version:             0.1.0.0
synopsis:            Web components for building Haskell services with Servant and Prometheus.
description:         Web-oriented components for building production Haskell services.
                     Includes health endpoints, Prometheus metrics, service discovery,
                     health checks, and application bootstrapping. Depends on Servant and Prometheus.
                     Re-exports prodapi-core modules for convenience.
license:             BSD3
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
      Prod.App
      Prod.Discovery
      Prod.Echo
      Prod.Health
      Prod.Healthcheck
      Prod.MimeTypes
      Prod.Prometheus
      Prod.Reports
      Prod.Status
      Prod.Watchdog
      Paths_prodapi_web
  reexported-modules:
      Prod.Tracer as Prod.Tracer,
      Prod.Background as Prod.Background,
      Prod.Stepper as Prod.Stepper
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings DataKinds TypeApplications TypeOperators
  build-depends:
    base >= 4.7 && <5,
    aeson >= 2.2.1 && < 2.3,
    containers >= 0.6.8 && < 0.7,
    bytestring >= 0.12.1 && < 0.13,
    text >= 2.1.1 && < 2.2,
    contravariant >= 1.5.5 && < 1.6,
    time >= 1.12.2 && < 1.13,
    async >= 2.2.5 && < 2.3,
    directory >= 1.3.8 && < 1.4,
    http-api-data >= 0.6 && < 0.7,
    http-client >= 0.7.17 && < 0.8,
    http-media >= 0.8.1 && < 0.9,
    lucid >= 2.11.20230408 && < 2.12,
    process-extras >= 0.7.4 && < 0.8,
    prometheus-client >= 1.1.1 && < 1.2,
    prometheus-metrics-ghc >= 1.0.1 && < 1.1,
    servant >= 0.20.1 && < 0.21,
    servant-client >= 0.20 && < 0.21,
    servant-server >= 0.20 && < 0.21,
    wai >= 3.2.4 && < 3.3,
    unix-time >= 0.4.16 && < 0.5,
    unbounded-delays >= 0.1.1.1 && < 0.2,
    uuid >= 1.3.15 && < 1.4,
    prodapi-core >= 0.1.0 && < 0.2
  default-language:    Haskell2010

