cabal-version:       >=1.10
name:                prodapi
version:             0.1.0.0
synopsis:            Some curated and opinionated packages for building Haskell services.
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
      Prod.App
      Prod.Background
      Prod.Discovery
      Prod.Echo
      Prod.Health
      Prod.MimeTypes
      Prod.Prometheus
      Prod.Reports
      Prod.Status
      Prod.Tracer
      Prod.UserAuth
      Prod.UserAuth.Api
      Prod.UserAuth.Backend
      Prod.UserAuth.Base
      Prod.UserAuth.Counters
      Prod.UserAuth.HandlerCombinators
      Prod.UserAuth.JWT
      Prod.UserAuth.Runtime
      Prod.Watchdog
      Paths_prodapi
  -- other-modules:
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings DataKinds TypeApplications TypeOperators
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , containers
    , cookie
    , directory
    , http-media
    , jwt
    , lucid
    , postgresql-simple
    , prometheus-client
    , prometheus-metrics-ghc
    , servant
    , servant-server >= 0.18
    , http-api-data
    , text
    , time
    , uuid
    , wai
    , process-extras
    , contravariant
  default-language:    Haskell2010
